[Feature] Use jupyter-black to format codes, and refactor review_writer

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
+   "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "env"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
+      "INFO:utils.logger:Repo path:   [E:\\_codes\\GPT-Paper]\n",
+      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
+      "INFO:utils.logger:Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this cell when initialized\n",
+    "import jupyter_black\n",
+    "import os\n",
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "repo_path = Path(os.path.abspath(\".\")).parent\n",
+    "if str(repo_path) not in sys.path:\n",
+    "    sys.path.append(str(repo_path))\n",
+    "work_dir = Path().absolute()\n",
+    "\n",
+    "from IPython.display import display\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import Image as wImage\n",
+    "from ipywidgets import HBox, Layout\n",
+    "from utils.logger import logger\n",
+    "from termcolor import colored\n",
+    "\n",
+    "jupyter_black.load(lab=True)\n",
+    "logger.note(f\"Repo path:   [{repo_path}]\")\n",
+    "logger.note(f\"Working dir: [{work_dir}]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "1739b204-98a3-4775-ba26-c27609c98816",
    "metadata": {
     "editable": true,
@@ -14,24 +63,9 @@
    },
    "outputs": [
     {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])?  y\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Repo path: [E:\\_codes\\GPT-Paper]\n",
-      "Current directory: [E:\\_codes\\GPT-Paper\\notebook]\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7201bbfd67744c51b70189588699b50c",
+       "model_id": "19da721d99fd4dea87dba1841309979b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,24 +90,7 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "from IPython.display import display\n",
-    "from ipywidgets import Image as wImage\n",
-    "from ipywidgets import HBox, Layout\n",
-    "\n",
-    "repo_path = Path(os.path.abspath(\".\")).parent\n",
-    "if str(repo_path) not in sys.path:\n",
-    "    sys.path.append(str(repo_path))\n",
-    "current_directory = Path().absolute()\n",
-    "\n",
-    "from utils.logger import logger\n",
-    "from termcolor import colored\n",
     "from notebook_ui import set_background\n",
-    "\n",
-    "logger.note(f\"Repo path: [{repo_path}]\")\n",
-    "logger.note(f\"Current directory: [{current_directory}]\")\n",
     "\n",
     "# pdf_dir = \"Deep learning predicts postsurgical recurrence of hepatocellular carcinoma from digital histopathologic images\"\n",
     "\n",
@@ -81,10 +98,16 @@
     "\n",
     "image_paths = [\n",
     "    f\n",
-    "    for f in (repo_path / \"pdfs\" / pdf_dir / \"queries\" / \"Tree of Thoughts vs Graph of Thoughts\").glob(\"*.png\")\n",
+    "    for f in (\n",
+    "        repo_path\n",
+    "        / \"pdfs\"\n",
+    "        / pdf_dir\n",
+    "        / \"queries\"\n",
+    "        / \"Tree of Thoughts vs Graph of Thoughts\"\n",
+    "    ).glob(\"*.png\")\n",
     "]\n",
     "images = [\n",
-    "    wImage(value=image_path.open(\"rb\").read(), format='png', width=400)\n",
+    "    wImage(value=image_path.open(\"rb\").read(), format=\"png\", width=400)\n",
     "    for image_path in image_paths\n",
     "]\n",
     "\n",
@@ -94,9 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "id": "81278999-a9bc-4416-9a55-c6f7306e049e",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -108,7 +137,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70426b6b85234eb48c9dc5272996e1a7",
+       "model_id": "7b91261d2216463fbc903a644cc34d0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +151,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa504ba033db402cabe427261fa9a76d",
+       "model_id": "5d8255c1c4174ac1946774679b1e9452",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +165,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4ad215c27b14d30a284190dcab71e54",
+       "model_id": "ffeb371d2a7448d7b3720b7f13fbee46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +179,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e08aa7c915d64e31a5d77cf8da8ac9cb",
+       "model_id": "8f9c2e8f636a4a9fbab8187387fe675b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +193,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5296e7fa595d4534b5ae0c5deead6b82",
+       "model_id": "df84623038254860bdf0e399bfee365d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +207,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03208acc5a944955b0a56ce3a57c5b5d",
+       "model_id": "5adce6e4961a4a15bc433eeb27a9ab8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +221,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5410dbef205746adb3fef42f2b4e1687",
+       "model_id": "d804a81808484c4ca9fb3cf5b0c9b740",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +235,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "548cf4e281c24caab79cbb1437492a7c",
+       "model_id": "b8bfa475b84c400bb82151c832d7ac67",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +249,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af0b2ce2148946dd8537564d739f9a54",
+       "model_id": "f4f25f0cdba9468cbf82ae76aa2bb68a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8048b56499b6480abeb588aab381697e",
+       "model_id": "2ff275b29ed0408ebec9b21365049074",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +277,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a225d750fb2646fd817b15b7872e5b95",
+       "model_id": "19e64b2e8b704856bfe17f589397dea8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "132a4dd31b0d400f87155f1afba57185",
+       "model_id": "727ab1b9b54645e48743fbeeac4b6a86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e867a52f5a594fed9692dd31bdbf2fc7",
+       "model_id": "4f9c131b7d61430ea2af6f37aff71ea3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c924470bc096402eaf283dcda18797ee",
+       "model_id": "cd70720b1a54453c86cb0c8e198890c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -304,7 +333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "244c528f669548c1b046bad98f0decad",
+       "model_id": "ec9a805cf214476cb90b9529e693d514",
        "version_major": 2,
        "version_minor": 0
       },
@@ -318,7 +347,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4830fdcb662c4a1bb34cbe630f74b9cb",
+       "model_id": "703082671dce45bc9abe31bb9b939ef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +361,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11bbd1430781455cad9543a5ee6c6493",
+       "model_id": "57699b70b35d48c39adc95d26010f962",
        "version_major": 2,
        "version_minor": 0
       },
@@ -346,7 +375,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "45cea42b828a46dcae6d41ecb25d87e2",
+       "model_id": "9f4adc58353048d6be5813191ec65c7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -360,7 +389,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d6657d8f511461a8399396c0d5f3b33",
+       "model_id": "8bb95d357edd42f9a1327902f59e1afc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -374,7 +403,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e6a2177ca084099a4e8432b329687d4",
+       "model_id": "adc1d507ea524c8ab935af021faaa5e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -388,7 +417,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a78725bc481f4eb296ab222d450cc0ac",
+       "model_id": "fcff2ead64874eee8e2cc9315778cf02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +431,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12813618fd32490e8bf62be499ac7b16",
+       "model_id": "ef861b1eab2548378dbd072659772443",
        "version_major": 2,
        "version_minor": 0
       },
@@ -416,7 +445,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35a27bfe0a804cf09283eea4a673e51d",
+       "model_id": "2daae1f5ad144fd7a0dde198c84b6860",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,37 +458,31 @@
     }
    ],
    "source": [
-    "import ipywidgets as widgets\n",
-    "import os\n",
-    "from pathlib import Path\n",
     "pdf_root = Path(os.path.abspath(\".\")).parent / \"pdfs\"\n",
     "print(f\"PDFs root: {str(pdf_root)}\")\n",
     "\n",
     "pdf_paths = pdf_root.glob(\"*.pdf\")\n",
     "pdf_path_checkboxes = [\n",
-    "    widgets.Checkbox(value=False, description=pdf_path.name, disabled=False, indent=False, layout=widgets.Layout(width='auto'))\n",
+    "    widgets.Checkbox(\n",
+    "        value=False,\n",
+    "        description=pdf_path.name,\n",
+    "        disabled=False,\n",
+    "        indent=False,\n",
+    "        layout=widgets.Layout(width=\"auto\"),\n",
+    "    )\n",
     "    for pdf_path in pdf_paths\n",
     "]\n",
     "\n",
     "for pdf_path_checkbox in pdf_path_checkboxes:\n",
-    "    display(pdf_path_checkbox)\n"
+    "    display(pdf_path_checkbox)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
    "id": "dc07ad82-2aae-4114-b21d-bbb88b9ec642",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2308.09687 - Graph of Thoughts.pdf\n",
-      "Artificial Intelligence in Hepatology Ready for the Primetime.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for pdf_path_checkbox in pdf_path_checkboxes:\n",
     "    if pdf_path_checkbox.value:\n",
