[Feature] Enable OpenAIAgent in jupyter

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -27,18 +27,23 @@
    ],
    "source": [
     "# Run this cell when initialized\n",
-    "import jupyter_black\n",
+    "%load_ext autoreload\n",
+    "\n",
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
+    "import logging\n",
     "\n",
     "repo_path = Path(os.path.abspath(\".\")).parent\n",
     "if str(repo_path) not in sys.path:\n",
     "    sys.path.append(str(repo_path))\n",
     "work_dir = Path().absolute()\n",
     "\n",
-    "from IPython.display import display\n",
+    "\n",
+    "import jupyter_black\n",
     "import ipywidgets as widgets\n",
+    "from importlib import reload\n",
+    "from IPython.display import display\n",
     "from ipywidgets import Image as wImage\n",
     "from ipywidgets import HBox, Layout\n",
     "from utils.logger import logger\n",
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "1739b204-98a3-4775-ba26-c27609c98816",
    "metadata": {
     "editable": true,
@@ -65,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19da721d99fd4dea87dba1841309979b",
+       "model_id": "b589424d49644b8494c61be2bf12a11b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "81278999-a9bc-4416-9a55-c6f7306e049e",
    "metadata": {
     "editable": true,
@@ -126,337 +131,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PDFs root: E:\\_codes\\GPT-Paper\\pdfs\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b91261d2216463fbc903a644cc34d0c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='2308.09687 - Graph of Thoughts.pdf', indent=False, layout=Layout(width='aut…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d8255c1c4174ac1946774679b1e9452",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Artificial Intelligence in Hepatology Ready for the Primetime.pdf', indent=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffeb371d2a7448d7b3720b7f13fbee46",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Artificial intelligence in liver diseases Improving diagnostics, prognostic…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f9c2e8f636a4a9fbab8187387fe675b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Deep learning for evaluation of microvascular invasion in hepatocellular ca…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df84623038254860bdf0e399bfee365d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Deep learning for prediction of hepatocellular carcinoma recurrence after r…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5adce6e4961a4a15bc433eeb27a9ab8f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Deep learning in hepatocellular carcinoma Current status and future perspec…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d804a81808484c4ca9fb3cf5b0c9b740",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Deep learning in histopathology the path to the clinics.pdf', indent=False,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8bfa475b84c400bb82151c832d7ac67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Deep learning predicts postsurgical recurrence of hepatocellular carcinoma …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f4f25f0cdba9468cbf82ae76aa2bb68a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Development of a deep pathomics score for predicting hepatocellular carcino…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ff275b29ed0408ebec9b21365049074",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Explainable medical imaging AI needs human-centered design a systematic rev…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19e64b2e8b704856bfe17f589397dea8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Exploring pathological signatures for predicting the recurrence of early-st…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "727ab1b9b54645e48743fbeeac4b6a86",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='GUT 2020 Exploring prognostic indicators in the pathological images of hepa…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f9c131b7d61430ea2af6f37aff71ea3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='HEP 2020 Predicting survival after hepatocellular carcinoma resection using…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd70720b1a54453c86cb0c8e198890c5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Implementation of deep learning in liver pathology optimizes diagnosis of b…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec9a805cf214476cb90b9529e693d514",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='JOH 2017 Histological Subtypes of Hepatocellular Carcinoma Are Related To G…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "703082671dce45bc9abe31bb9b939ef0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='JOH 2022 Artificial intelligence for the prevention and clinical management…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57699b70b35d48c39adc95d26010f962",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Med Image Anal. 2022 Explainable artificial intelligence (XAI) in deep lear…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f4adc58353048d6be5813191ec65c7e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Multi-task deep learning network to predict future macrovascular invasion i…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8bb95d357edd42f9a1327902f59e1afc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf', in…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adc1d507ea524c8ab935af021faaa5e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Novel deep learning-based solution for identification of prognostic subgrou…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fcff2ead64874eee8e2cc9315778cf02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='NPJ 2020 Classification and mutation prediction based on.pdf', indent=False…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef861b1eab2548378dbd072659772443",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Quantitative analysis of artificial intelligence on liver cancer.pdf', inde…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2daae1f5ad144fd7a0dde198c84b6860",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Checkbox(value=False, description='Utilization of model-agnostic explainable artificial intelligence framework…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pdf_root = Path(os.path.abspath(\".\")).parent / \"pdfs\"\n",
     "print(f\"PDFs root: {str(pdf_root)}\")\n",
@@ -479,20 +154,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "dc07ad82-2aae-4114-b21d-bbb88b9ec642",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf\n",
+      "INFO:utils.logger:Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "for pdf_path_checkbox in pdf_path_checkboxes:\n",
     "    if pdf_path_checkbox.value:\n",
-    "        print(pdf_path_checkbox.description)"
+    "        logger.mesg(pdf_path_checkbox.description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "52f3412b-4807-4014-9b71-2af6362a70c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'system', 'content': '你是一个专业的中英双语专家。如果给出中文，你需要如实翻译成英文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'}, {'role': 'user', 'content': 'In this paper, we introduce Semantic-SAM, a universal image segmentation model to enable segment and recognize anything at any desired granularity. Our model offers two key advantages: semantic-awareness and granularity-abundance. To achieve semantic-awareness, we consolidate multiple datasets across three granularities and introduce decoupled classification for objects and parts. This allows our model to capture rich semantic information.'}]\n",
+      "assistant: 在这篇论文中，我们介绍了Semantic-SAM，这是一个通用的图像分割模型，可以在任何所需的粒度上对任何物体进行分割和识别。我们的模型具有两个关键优势：语义感知和粒度丰富性。为了实现语义感知，我们整合了三种不同粒度的多个数据集，并引入了对象和部分的分离分类。这使得我们的模型能够捕获丰富的语义信息。\n"
+     ]
+    }
+   ],
+   "source": [
+    "%autoreload\n",
+    "import asyncio\n",
+    "import nest_asyncio\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "from agents.openai import OpenAIAgent\n",
+    "\n",
+    "asyncio.set_event_loop_policy(asyncio.WindowsSelectorEventLoopPolicy())\n",
+    "\n",
+    "agent = OpenAIAgent()\n",
+    "\n",
+    "asyncio.run(agent.test_prompt())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52f3412b-4807-4014-9b71-2af6362a70c6",
+   "id": "26aba5c6-ddd0-42bc-a6bf-1df92e457451",
    "metadata": {},
    "outputs": [],
    "source": []
