[Feature] Read cells info

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6bd0166d-e107-4dc3-a95d-f72a5357e3d2",
    "metadata": {
     "editable": true,
@@ -13,50 +13,44 @@
      "env"
     ]
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
-      "INFO:utils.logger:Repo path:   [E:\\_codes\\GPT-Paper]\n",
-      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
-      "INFO:utils.logger:Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this cell when initialized\n",
     "%load_ext autoreload\n",
+    "%autoreload\n",
     "\n",
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
     "import logging\n",
+    "import ipynbname\n",
     "\n",
     "repo_path = Path(os.path.abspath(\".\")).parent\n",
     "if str(repo_path) not in sys.path:\n",
     "    sys.path.append(str(repo_path))\n",
     "work_dir = Path().absolute()\n",
-    "\n",
+    "ipynb_path = ipynbname.path()\n",
     "\n",
     "import jupyter_black\n",
     "import ipywidgets as widgets\n",
     "from importlib import reload\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display as dp\n",
+    "from IPython.display import Javascript as JS\n",
     "from ipywidgets import Image as wImage\n",
     "from ipywidgets import HBox, Layout\n",
     "from utils.logger import logger\n",
     "from termcolor import colored\n",
     "\n",
+    "\n",
     "jupyter_black.load(lab=True)\n",
     "logger.note(f\"Repo path:   [{repo_path}]\")\n",
-    "logger.note(f\"Working dir: [{work_dir}]\")"
+    "logger.note(f\"Working dir: [{work_dir}]\")\n",
+    "logger.note(f\"Notebook Path: [{ipynb_path}]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1739b204-98a3-4775-ba26-c27609c98816",
    "metadata": {
     "editable": true,
@@ -66,34 +60,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b589424d49644b8494c61be2bf12a11b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\xf6\\x00\\x00\\x0c\\xe4\\x08\\x02\\x00\\x00…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src onerror=\"var cell = this.closest('.jp-CodeCell');var editor = cell.querySelector('.jp-Editor');editor.style.background='black';this.parentNode.removeChild(this)\" style=\"display:none\">"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from notebook_ui import set_background\n",
     "\n",
@@ -116,7 +83,7 @@
     "    for image_path in image_paths\n",
     "]\n",
     "\n",
-    "display(HBox(images))\n",
+    "dp(HBox(images))\n",
     "set_background(\"black\")"
    ]
   },
@@ -149,12 +116,12 @@
     "]\n",
     "\n",
     "for pdf_path_checkbox in pdf_path_checkboxes:\n",
-    "    display(pdf_path_checkbox)"
+    "    dp(pdf_path_checkbox)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dc07ad82-2aae-4114-b21d-bbb88b9ec642",
    "metadata": {
     "editable": true,
@@ -163,16 +130,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf\n",
-      "INFO:utils.logger:Nature Cancer 2020 Pan-cancer computational histopathology reveals.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for pdf_path_checkbox in pdf_path_checkboxes:\n",
     "    if pdf_path_checkbox.value:\n",
@@ -181,19 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "52f3412b-4807-4014-9b71-2af6362a70c6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'role': 'system', 'content': '你是一个专业的中英双语专家。如果给出中文，你需要如实翻译成英文；如果给出中文，你需要如实翻译成英文。你的翻译应当是严谨的和自然的，不要删改原文。请按照要求翻译如下文本：'}, {'role': 'user', 'content': 'In this paper, we introduce Semantic-SAM, a universal image segmentation model to enable segment and recognize anything at any desired granularity. Our model offers two key advantages: semantic-awareness and granularity-abundance. To achieve semantic-awareness, we consolidate multiple datasets across three granularities and introduce decoupled classification for objects and parts. This allows our model to capture rich semantic information.'}]\n",
-      "assistant: 在这篇论文中，我们介绍了Semantic-SAM，这是一个通用的图像分割模型，可以在任何所需的粒度上对任何物体进行分割和识别。我们的模型具有两个关键优势：语义感知和粒度丰富性。为了实现语义感知，我们整合了三种不同粒度的多个数据集，并引入了对象和部分的分离分类。这使得我们的模型能够捕获丰富的语义信息。\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%autoreload\n",
     "import asyncio\n",
@@ -211,9 +160,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2edd2249-03b5-4aa9-b3c3-ff71252691ff",
+   "metadata": {},
+   "source": [
+    "## This is a title block."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bce80c78-f9d6-4e1a-b0d4-3e4c30dc355a",
+   "metadata": {},
+   "source": [
+    "This is a text block"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26aba5c6-ddd0-42bc-a6bf-1df92e457451",
+   "id": "c6a45546-972b-4d09-894f-61d2f520ec2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload\n",
+    "from cells import read_cells\n",
+    "\n",
+    "\n",
+    "cells = read_cells()\n",
+    "for idx, cell in cells:\n",
+    "    print(f\"{idx}: {cell}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09ff310c-b8f4-407c-a986-e74b363d833c",
    "metadata": {},
    "outputs": [],
    "source": []
