[Feature] New util: get_cell_index()

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -19,6 +19,7 @@
     "%load_ext autoreload\n",
     "%autoreload\n",
     "\n",
+    "import datetime\n",
     "import os\n",
     "import sys\n",
     "from pathlib import Path\n",
@@ -35,7 +36,7 @@
     "import ipywidgets as widgets\n",
     "from importlib import reload\n",
     "from IPython.display import display as dp\n",
-    "from IPython.display import Javascript as JS\n",
+    "from IPython.display import Javascript\n",
     "from ipywidgets import Image as wImage\n",
     "from ipywidgets import HBox, Layout\n",
     "from utils.logger import logger\n",
@@ -45,7 +46,8 @@
     "jupyter_black.load(lab=True)\n",
     "logger.note(f\"Repo path:   [{repo_path}]\")\n",
     "logger.note(f\"Working dir: [{work_dir}]\")\n",
-    "logger.note(f\"Notebook Path: [{ipynb_path}]\")"
+    "logger.note(f\"Notebook Path: [{ipynb_path}]\")\n",
+    "logger.note(f\"Now: [{datetime.datetime.now()}]\")"
    ]
   },
   {
@@ -178,26 +180,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6a45546-972b-4d09-894f-61d2f520ec2b",
+   "id": "46439120-7630-4e20-9b2d-2fbda883d785",
    "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload\n",
-    "from cells import read_cells\n",
+    "from cells import get_cell_index\n",
     "\n",
-    "\n",
-    "cells = read_cells()\n",
-    "for idx, cell in cells:\n",
-    "    print(f\"{idx}: {cell}\")"
+    "print(get_cell_index())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09ff310c-b8f4-407c-a986-e74b363d833c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
