[Feature] New util: get_above_cell_content()

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -9,9 +9,7 @@
     "slideshow": {
      "slide_type": ""
     },
-    "tags": [
-     "env"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -35,7 +33,7 @@
     "import jupyter_black\n",
     "import ipywidgets as widgets\n",
     "from importlib import reload\n",
-    "from IPython.display import display as dp\n",
+    "from IPython.display import display\n",
     "from IPython.display import Javascript\n",
     "from ipywidgets import Image as wImage\n",
     "from ipywidgets import HBox, Layout\n",
@@ -178,16 +176,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9cf3b0d8-7e97-49db-af52-db3df15a9743",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "# Unraveling the “black-box” of artificial intelligence-based pathological analysis of liver cancerapplications"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46439120-7630-4e20-9b2d-2fbda883d785",
+   "id": "0e88ebf3-ecfd-4691-964e-5238ac73af19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%autoreload\n",
-    "from cells import get_cell_index\n",
-    "\n",
-    "print(get_cell_index())"
+    "%lsmagic"
    ]
   }
  ],
